# BenchStab

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchstab/: __init__.py  benchstab.py  client.py  preprocessor.py
benchstab/predictors/: base.py
benchstab/predictors/web/: __init__.py  eris.py  neemo.py
benchstab/predictors/web/automute/: __init__.py  base.py  id.py
benchstab/predictors/web/biosiglab/: __init__.py  base.py  file.py  id.py
benchstab/predictors/web/cupsat/: __init__.py  base.py  id.py
benchstab/predictors/web/ddgun/: __init__.py  base.py  file.py  id.py  sequence.py
benchstab/predictors/web/deepddg/: __init__.py  base.py  file.py  id.py
benchstab/predictors/web/duet/: __init__.py  base.py  file.py  id.py
benchstab/predictors/web/imutant/: __init__.py  base.py  file.py  id.py  sequence.py
benchstab/predictors/web/inps/: __init__.py  base.py  id.py  sequence.py
benchstab/predictors/web/istable/: __init__.py  (+3 more)
benchstab/utils/: aminoacids.py  dataset.py  exceptions.py  html_parser.py  status.py  structure.py
doc_src/: benchstab.rst  conf.py  contents.rst  details.md  index.rst  introduction.rst  predictors.rst  utils.rst
doc_src/_templates/: layout.html
tests/: preprocessor.py
tests/inputs/: 1CSE.fasta  input.tsv  input.txt  input_comma.csv  input_semicolon.csv  invalid_fasta.fasta
tests/predictor/: _template.py  automute.py  cupsat.py  ddgun.py  ddmut.py  duet.py  dynamut2.py  imutant2.py  imutant3.py  inps.py  istable.py  maestro.py  mcsm.py  mupro.py  ponsol.py  premps.py  prostata.py  saafec.py  sdm.py  sride.py
(+34 files in other folders)
